--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node backend/server.js",
-        "dev": "nodemon backend/server.js"
+        "dev": "nodemon backend/server.js",
+        "build": "echo 'No build step for backend'"
     },
     "keywords": [],
     "author": "",
