feat: Add backend server, database seeder, and `seed` script to package.json.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "node backend/server.js",
         "dev": "nodemon backend/server.js",
+        "seed": "node backend/seeder.js",
         "build": "echo 'No build step for backend'"
     },
     "keywords": [],
