--- a/vercel.json
+++ b/vercel.json
@@ -4,23 +4,12 @@
         {
             "src": "backend/server.js",
             "use": "@vercel/node"
-        },
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/backend/server.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/frontend/$1"
+            "dest": "backend/server.js"
         }
     ]
 }
